<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_Freq" Id="{a5383d9c-1c85-4bd7-8891-b4c4a2b18a5e}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	n_points: UINT;
END_VAR

VAR_GLOBAL
	/// FREQUENCY REGULATION ///
	output_pf_regulation: REAL;
	output_pf_regulation_scaled: REAL;
	frequency_smoothed: REAL;
	frequency_smoothed_mem: REAL;
	p_nd: REAL;
	
	K_FSMU: REAL := 0.5;
	K_FSMO: REAL := 0.5;
	frequency_reference: REAL := 50;
	
	enhanced_points: ARRAY [1..n_points, 1..3] OF REAL;
	out_limiter_max: REAL := 1.0;
	out_limiter_min: REAL := -1.0;
	
	under_f_db_threshold: REAL := 49.980;
	over_f_db_threshold: REAL := 50.020;
	
	over_f_medium_threshold: REAL := 50.20;
	under_f_medium_threshold: REAL := 49.8;
	
	max_value_over_f: REAL := 51.5;
	min_value_under_f: REAL := 49.5;
	
	S_under_mid_val: REAL :=  2.5;
	S_over_mid_val: REAL := 2.5;
	S_under_ext_val: REAL := 2.5;
	S_over_ext_val: REAL := 2.5;
	
	frequency_regulation_priority: BOOL;
	sp_nominal_freq: REAL;
	max_delta_sp: REAL := 0.25;
	prod_nominal_freq: REAL;
	
	n_pf_soil: UINT; // numero di soglie di power factor
	pf_conf: ARRAY[1..3] OF ARRAY[1..2]  OF REAL := [[0.5, 0.98], [0.7, 0.95], [1, 0.93]];
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>